# miscgeom

./: .gitignore  LICENSES_bundled.txt  README.md  meson.build  pyproject.toml  pytest.ini
.github/workflows/: build_wheels.yml
docs/: Makefile  make.bat  preprocess.py
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
miscgeom/: __init__.py  meson.build
miscgeom/_c_core/: Point3D.cpp  Point3D.hpp  cyl_int.c  cyl_int.cpp  cyl_int_c_api.h  min_distance.cpp  min_distance.hpp  utils.hpp
miscgeom/c_core/: Point3D.cpp  Point3D.h  Point3D.hpp  curves.c  curves.h  cyl_int.cpp  cyl_int.h  cyl_int.hpp  cyl_int_c_api.cpp  min_distance.cpp  min_distance.h  min_distance.hpp  mindist_c_api.cpp  mindist_c_api.h  utils.cpp
miscgeom/curves/: __init__.py  _curves.py  fast_curves.c  meson.build
miscgeom/curves/tests/: test_curves.py
miscgeom/fem/: __init__.py  _fem.py  meson.build
miscgeom/fem/tests/: test_fem.py
miscgeom/intersection/: _intersection.py  fast_intersection.c  meson.build
miscgeom/intersection/tests/: test_intersection.py
miscgeom/mindist/: __init__.py  _mindist.py  fast_mindist.c  meson.build  mindist.c
miscgeom/mindist/tests/: test_mindist.py
